# example

./: .gitignore
backend/flask/: api.py  files.py
backend/sql/: basic_mysql.py  csv_to_mysql.py
bmc/dbus-client/: dbus-client.bb
bmc/dbus-client/files/: dbus-client.cpp  dbus-client.service  meson.build
bmc/dbus-server/: dbus-server.bb
bmc/dbus-server/files/: dbus-server.service  main.cpp  meson.build
bmc/dbus-server_cmake/: dbus-server.bb
bmc/demo-hello/: hello-recipe.bb
bmc/driver/: pmbus.c
c++/: RAII.cpp  SFINAE.cpp  async.cpp  atomic.cpp  container.cpp  coroutine.cpp  mutex.cpp  perfact_forwarding.cpp  template_meta_programing.cpp  thread.cpp
c++/modern_c++/: concept.cpp  constexpr.cpp  emplace.cpp  lambda.cpp  move.cpp  ranges.cpp  struct_binding.cpp  template.cpp  unique_ptr.cpp
c++/oop/: Encapsulation.cpp  Inheritance.cpp  Polymorphism.cpp
debugging/: .gitignore
driver/: linear11.c  mpc42013.c  mpc_42013_vin.c  mpc_42013_vout.c  pmbus_template.c
flask/data/: test_json.py
flask/video_stream/: server.py
go/: go.work
go/greetings/: greeting.go
go/hello/: hello.go
ml/: decision_tree.py
opencv/: video.py
profiling/: .gitignore  dot.c
stm32/blink/: .cproject  blink Debug.launch  blink.ioc
stm32/lab3-uart/: .cproject  .project  lab3-uart Debug.launch  lab3-uart.ioc
testing/: bmc.py
tracing/: .gitignore  hello-0.c  hello-1.c  hello-2.c  hello.0.objdump.txt  hello.objdump.txt  hello.readelf.txt  hello.strace.txt  trace_cmd.txt  trace_first_func.txt  trace_second_func.txt  trace_x64_sys_write_func.txt
(+31 files in other folders)
